# axiom

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  IP_HYGIENE_AUDIT.md  LICENSE  Makefile  NOTICE.md
apps/axiom-animation-lab/: Cargo.toml  app.toml
apps/axiom-animation-lab/src/: authoring.rs  inspect.rs  lib.rs  main.rs  rig.rs  scene.rs  svg.rs
apps/axiom-asset-stream-demo/: Cargo.toml  app.toml  test_asset_stream.py  test_asset_stream_workers.py
apps/axiom-asset-stream-demo/fixture/: assets.toml
apps/axiom-asset-stream-demo/src/: lib.rs  pool.rs  web.rs
apps/axiom-asset-stream-demo/web/: index.html  worker.js  workers.html
apps/axiom-browser-dev-harness/: Cargo.toml  DEBUG_OVERLAY.md  app.toml
apps/axiom-browser-dev-harness/src/: browser_diagnostics.rs  browser_keyboard_shortcut.rs  debug_command.rs  debug_command_registry.rs  debug_console.rs  debug_overlay.rs  debug_overlay_density.rs  debug_overlay_state.rs  lib.rs  web.rs
apps/axiom-browser-dev-harness/tests/: overlay_pipeline.rs
apps/axiom-browser-dev-harness/web/: index.html
apps/axiom-demo-rotating-cube/: Cargo.toml  VERTICAL_SLICE.md  app.toml  slice.toml
apps/axiom-demo-rotating-cube-browser/: Cargo.toml  app.toml  axiom.app.toml
apps/axiom-demo-rotating-cube-browser/src/: browser_api.rs  browser_bootstrap.rs  browser_surface_registry.rs  cube_mesh.rs  cube_slice.rs  lib.rs  live_gpu_binding.rs  render_loop.rs  scene_content.rs
apps/axiom-demo-rotating-cube-browser/tests/: browser_app_manifest.rs  scene_manifest_matches_runtime.rs
apps/axiom-demo-rotating-cube-browser/web/: index.html
apps/axiom-demo-rotating-cube/examples/: introspection_evidence.rs  reflection_evidence.rs  run_vertical_slice.rs
apps/axiom-demo-rotating-cube/src/: app_state.rs  cube_demo.rs  cube_frame.rs  cube_mesh.rs  cube_world.rs  demo_api.rs  lib.rs  render_to_gpu_submission.rs  scene_to_render_input.rs  translation.rs  vertical_slice.rs
apps/axiom-demo-rotating-cube/tests/: deterministic_rotating_cube.rs  golden_artifacts.rs  vertical_slice.rs
apps/axiom-dev-harness/: Cargo.toml  DEBUG_OVERLAY.md  app.toml
apps/axiom-dev-harness/src/: lib.rs  web.rs
apps/axiom-dev-harness/tests/: architecture.rs
apps/axiom-dev-harness/web/: index.html
apps/axiom-doom-browser/: Cargo.toml  app.toml  level.axiom
apps/axiom-doom-browser/src/: agent.rs  level.rs  lib.rs  perception.rs  web.rs
apps/axiom-doom-browser/tests/: agent_golden.rs  agent_perception.rs  golden_state.rs  replay_determinism.rs
apps/axiom-doom-browser/web/: index.html
apps/axiom-forest-walk/: Cargo.toml  app.toml
apps/axiom-forest-walk/src/: curves.rs  lib.rs  overlay.rs  walk.rs
apps/axiom-forest-walk/tests/: architecture.rs
apps/axiom-forest-walk/web/: index.html
apps/axiom-gallery/: Cargo.toml  README.md  app.toml  slice.toml
apps/axiom-gallery/examples/: growth_bench_stream.rs  growth_render_maps.rs
apps/axiom-gallery/src/: lib.rs
apps/axiom-gallery/tests/: doom_agent_golden.rs  doom_agent_perception.rs  doom_golden_state.rs  doom_replay_determinism.rs  gallery_render_determinism.rs  growth_agent_climb.rs  growth_agent_directive.rs  quintet_golden_game.rs  quintet_required_behaviors.rs  retro_fps_agent_golden.rs  retro_fps_agent_perception.rs  retro_fps_golden_state.rs  retro_fps_render_golden.rs  retro_fps_replay_determinism.rs  roomed_golden_game.rs  roomed_required_behaviors.rs  rotating_cube_scene_manifest.rs  soccer_penalty_agent_golden.rs  soccer_penalty_kick_animation.rs  soccer_penalty_muscle.rs  soccer_penalty_pass10_impact_polish.rs  soccer_penalty_pass2_depth_ordering.rs  soccer_penalty_pass3_lighting_and_style.rs  soccer_penalty_pass4_aim_and_power.rs  soccer_penalty_pass5_ball_trajectory.rs  soccer_penalty_pass6_goalie_volumes.rs  soccer_penalty_pass7_goalie_pose_clips.rs  soccer_penalty_pass8_shot_result.rs  soccer_penalty_pass9_scoring_and_loop.rs  soccer_penalty_physics_kick.rs  soccer_penalty_stage1_diorama.rs  zanzoban_addons.rs  zanzoban_golden_game.rs  zanzoban_required_behaviors.rs
apps/axiom-gallery/web/: gallery.js  index.html  keypad.js  styles.css  triptych.html  triptych.js
apps/axiom-game-runtime/: Cargo.toml  app.toml
apps/axiom-game-runtime/integration/: README.md  draw2d-marshalling.test.mjs  headless-fps.test.mjs
apps/axiom-game-runtime/src/: assets.rs  audio.rs  bridge.rs  draw2d.rs  embed.rs  font.rs  grid.rs  input.rs  lib.rs  mathbridge.rs  physics.rs  query.rs  rng.rs  runtime.rs  scene3d.rs  time.rs  ui.rs  wasm.rs  world.rs
apps/axiom-game-runtime/web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/axiom-generia/: Cargo.toml  app.toml
apps/axiom-generia/src/: curves.rs  lib.rs  overlay.rs  web.rs
apps/axiom-generia/tests/: architecture.rs
apps/axiom-generia/web/: index.html
apps/axiom-gravix/: Cargo.toml  app.json  app.toml
apps/axiom-gravix/src/: chase_camera.rs  course.rs  halfpipe.rs  lib.rs  overlay.rs  spin.rs  (+1 more)
apps/axiom-growth/: BROWSER_VIEWER.md  Cargo.toml  app.json  app.toml
apps/axiom-netcode-demo/: Cargo.toml  app.toml
apps/axiom-netcode-sim/: Cargo.toml  app.toml
apps/axiom-netplay/: Cargo.toml  app.toml
apps/axiom-netplay-browser/: Cargo.toml  app.toml
apps/axiom-netplay-ffi/: Cargo.toml  app.toml
apps/axiom-physics-crucible/: ARCHITECTURE.md  Cargo.toml  README.md  TESTING.md  app.toml  slice.toml
apps/axiom-proc-player/: Cargo.toml  app.toml
apps/axiom-proc-playground/: Cargo.toml  app.toml
apps/axiom-quintet/: Cargo.toml  README.md  app.json  app.toml
apps/axiom-retro-fps/: Cargo.toml  RETRO_FPS_AGENT_PROTOCOL.md  RETRO_FPS_HOT_RELOAD.md  app.toml  slice.toml
apps/axiom-roomed-puzzle/: ARCHITECTURE.md  Cargo.toml  README.md  app.toml
apps/axiom-rotating-cube/: Cargo.toml  app.json  app.toml  slice.toml
apps/axiom-sim-crucible/: ARCHITECTURE.md  Cargo.toml  TESTING.md  app.toml
apps/axiom-sports-physics-lab/: Cargo.toml  app.json  app.toml
apps/axiom-stress-cubes/: Cargo.toml  app.toml  slice.toml
apps/axiom-stress-cubes-browser/: Cargo.toml  app.toml
(+2900 files in other folders)
