# Axiom workspace root.
#
# Only the kernel (Layer 00) exists today. Future layers will be added as new
# members here (e.g. crates/axiom-render, crates/axiom-ecs). The kernel imports
# nothing from any higher layer because no higher layer exists yet.
#
# `xtask` is repo-local tooling (the architecture checker), not a layer. It has
# no `layer.toml`, so the checker never treats it as part of the layer chain.
[workspace]
resolver = "2"
members = [
    "crates/axiom-kernel",
    "crates/axiom-runtime",
    "crates/axiom-math",
    "crates/axiom-host",
    "crates/axiom-frame",
    "crates/axiom-ecs",
    "crates/axiom-introspect",
    "crates/axiom-zones",
    "modules/axiom-scene",
    "modules/axiom-resources",
    "modules/axiom-render",
    "modules/axiom-webgpu",
    "modules/axiom-render-pipeline",
    "modules/axiom-windowing",
    "modules/axiom-netcode",
    "modules/axiom",
    "apps/axiom-demo-rotating-cube",
    "apps/axiom-demo-rotating-cube-browser",
    "apps/axiom-netcode-demo",
    "apps/axiom-netplay-browser",
    "crates/xtask",
    "tools/axiom-netcode-relay",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.89"

# Custom `dylint` lints (repo tooling — see tools/lints/). These hook into rustc
# to enforce structural rules the text-based xtask checker can't, starting with
# `test_without_assertion`. Run with `cargo dylint --all -- --all-targets`. This
# is metadata only: it adds no dependency edge, so the lint workspace stays out
# of the engine graph and the Module/Coverage laws.
[workspace.metadata.dylint]
libraries = [
    { path = "tools/lints/test_without_assertion" },
    { path = "tools/lints/no_unwrap_in_engine" },
    { path = "tools/lints/engine_no_time_in_sim" },
    { path = "tools/lints/engine_genuine_dependency" },
    # Tier-1 rulebook fan-out (banned-symbol / structural-size lints).
    { path = "tools/lints/engine_no_transmute" },
    { path = "tools/lints/engine_no_uninit_memory" },
    { path = "tools/lints/engine_no_static_mut" },
    { path = "tools/lints/engine_no_thread_spawn" },
    { path = "tools/lints/engine_no_wildcard_imports" },
    { path = "tools/lints/engine_no_runtime_type_branch" },
    { path = "tools/lints/engine_no_recursion" },
    { path = "tools/lints/engine_no_unitless_float_public_api" },
    { path = "tools/lints/engine_no_large_files" },
    { path = "tools/lints/engine_no_large_functions" },
    { path = "tools/lints/engine_no_large_structs" },
    { path = "tools/lints/engine_no_large_enums" },
    { path = "tools/lints/engine_no_large_impl_blocks" },
    { path = "tools/lints/engine_require_module_docs" },
]

# Deterministic, size-conscious release profile suitable for a future wasm build.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
