# Axiom workspace root.
#
# Only the kernel (Layer 00) exists today. Future layers will be added as new
# members here (e.g. crates/axiom-render, crates/axiom-ecs). The kernel imports
# nothing from any higher layer because no higher layer exists yet.
#
# `xtask` is repo-local tooling (the architecture checker), not a layer. It has
# no `layer.toml`, so the checker never treats it as part of the layer chain.
[workspace]
resolver = "2"
members = [
    "crates/axiom-kernel",
    "crates/axiom-crypto",
    "crates/axiom-runtime",
    "crates/axiom-math",
    "crates/axiom-host",
    "crates/axiom-frame",
    "crates/axiom-ecs",
    "crates/axiom-introspect",
    "crates/axiom-interface",
    "crates/axiom-layout",
    "crates/axiom-space",
    "crates/axiom-entropy",
    "crates/axiom-proc",
    "crates/axiom-proc-validate",
    "crates/axiom-zones",
    "modules/axiom-scene",
    "modules/axiom-assets",
    "modules/axiom-resources",
    "modules/axiom-render",
    "modules/axiom-webgpu",
    "modules/axiom-render-pipeline",
    "modules/axiom-windowing",
    "modules/axiom-gpu-backend",
    "modules/axiom-canvas2d-backend",
    "modules/axiom-netcode",
    "modules/axiom-net-protocol",
    "modules/axiom-client-core",
    "modules/axiom-sim-core",
    "modules/axiom-recording",
    "modules/axiom-debug-overlay",
    "modules/axiom-input",
    "modules/axiom-placement",
    "modules/axiom-terrain",
    "modules/axiom-biome",
    "modules/axiom-levelgen",
    "modules/axiom-worldsave",
    "modules/axiom-physics",
    "modules/axiom-audio",
    "modules/axiom-agent",
    "modules/axiom-agent-harness",
    "modules/axiom-perception",
    "modules/axiom-grid",
    "modules/axiom-tween",
    "modules/axiom-tick",
    "modules/axiom",
    "apps/axiom-demo-rotating-cube",
    "apps/axiom-demo-rotating-cube-browser",
    "apps/axiom-doom-browser",
    "apps/axiom-stress-cubes-browser",
    "apps/axiom-netcode-demo",
    "apps/axiom-netcode-sim",
    "apps/axiom-netplay-browser",
    "apps/axiom-netplay-ffi",
    "apps/axiom-growth",
    "apps/axiom-roomed-puzzle",
    "apps/axiom-quintet",
    "apps/axiom-sim-crucible",
    "apps/axiom-physics-crucible",
    "apps/axiom-browser-dev-harness",
    "apps/axiom-proc-playground",
    "apps/axiom-asset-stream-demo",
    "apps/axiom-game-runtime",
    "crates/xtask",
    "tools/axiom-asset-pack",
    "tools/axiom-netcode-relay",
    "tools/axiom-netplay-server",
    "tools/axiom-netplay-load",
    "tools/axiom-profile-runner",
    "tools/axiom-dev-reload",
    "tools/axiom-proc-inspect",
    "tools/axiom-proc-fuzz",
]

# `tools/axiom-shot` is deliberately NOT a workspace member. It enables
# `axiom-gpu-backend`'s `offscreen` feature (native wgpu), and Cargo feature
# unification would otherwise turn that feature on for the module during
# `cargo test --workspace` / the coverage + dylint gates — pulling the wgpu
# off-screen code into the module's *native* build, where it can't be covered or
# kept branchless. Keeping the screenshot tool out of the workspace confines that
# feature to the tool's own build. Run it with:
#   cargo run --manifest-path tools/axiom-shot/Cargo.toml --release -- [out.png] [tick]
exclude = ["tools/axiom-shot"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.89"

# Custom `dylint` lints (repo tooling — see tools/lints/). These hook into rustc
# to enforce structural rules the text-based xtask checker can't, starting with
# `test_without_assertion`. Run with `cargo dylint --all -- --all-targets`. This
# is metadata only: it adds no dependency edge, so the lint workspace stays out
# of the engine graph and the Module/Coverage laws.
[workspace.metadata.dylint]
libraries = [
    { path = "tools/lints/test_without_assertion" },
    { path = "tools/lints/no_unwrap_in_engine" },
    { path = "tools/lints/engine_no_time_in_sim" },
    { path = "tools/lints/engine_genuine_dependency" },
    # Tier-1 rulebook fan-out (banned-symbol / structural-size lints).
    { path = "tools/lints/engine_no_transmute" },
    { path = "tools/lints/engine_no_uninit_memory" },
    { path = "tools/lints/engine_no_static_mut" },
    { path = "tools/lints/engine_no_thread_spawn" },
    { path = "tools/lints/engine_no_wildcard_imports" },
    { path = "tools/lints/engine_no_runtime_type_branch" },
    { path = "tools/lints/engine_no_recursion" },
    { path = "tools/lints/engine_no_branching" },
    { path = "tools/lints/engine_no_unitless_float_public_api" },
    { path = "tools/lints/engine_no_large_files" },
    { path = "tools/lints/engine_no_large_functions" },
    { path = "tools/lints/engine_no_large_structs" },
    { path = "tools/lints/engine_no_large_enums" },
    { path = "tools/lints/engine_no_large_impl_blocks" },
    { path = "tools/lints/engine_require_module_docs" },
]

# Deterministic, size-conscious release profile suitable for a future wasm build.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

# Optimize the cryptography dependencies even in debug/test builds. ed25519/
# curve25519 field arithmetic is ~100x slower unoptimized, which would make the
# signed-lockstep tests (and the coverage gate) crawl. These are third-party
# dependencies, not engine spine, so optimizing them does not affect coverage
# instrumentation of our own crates — it only makes signing/verification fast.
[profile.dev.package.curve25519-dalek]
opt-level = 3
[profile.dev.package.ed25519-dalek]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
