# Axiom workspace root.
#
# Only the kernel (Layer 00) exists today. Future layers will be added as new
# members here (e.g. crates/axiom-render, crates/axiom-ecs). The kernel imports
# nothing from any higher layer because no higher layer exists yet.
#
# `xtask` is repo-local tooling (the architecture checker), not a layer. It has
# no `layer.toml`, so the checker never treats it as part of the layer chain.
[workspace]
resolver = "2"
members = [
    "crates/axiom-kernel",
    "crates/axiom-crypto",
    "crates/axiom-runtime",
    "crates/axiom-math",
    "crates/axiom-host",
    "crates/axiom-frame",
    "crates/axiom-ecs",
    "crates/axiom-introspect",
    "crates/axiom-interface",
    "crates/axiom-layout",
    "crates/axiom-noise",
    "crates/axiom-geosphere",
    "crates/axiom-hydrology",
    "crates/axiom-space",
    "crates/axiom-entropy",
    "crates/axiom-proc",
    "crates/axiom-proc-validate",
    "crates/axiom-recipe",
    "crates/axiom-proc-core",
    "crates/axiom-proc-texture",
    "crates/axiom-proc-mesh",
    "crates/axiom-zones",
    "modules/axiom-scene",
    "modules/axiom-assets",
    "modules/axiom-resources",
    "modules/axiom-render",
    "modules/axiom-webgpu",
    "modules/axiom-render-pipeline",
    "modules/axiom-windowing",
    "modules/axiom-gpu-backend",
    "modules/axiom-canvas2d-backend",
    "modules/axiom-netcode",
    "modules/axiom-net-protocol",
    "modules/axiom-client-core",
    "modules/axiom-sim-core",
    "modules/axiom-recording",
    "modules/axiom-debug-overlay",
    "modules/axiom-input",
    "modules/axiom-fp-controller",
    "modules/axiom-placement",
    "modules/axiom-terrain",
    "modules/axiom-terrain-mesh",
    "modules/axiom-biome",
    "modules/axiom-levelgen",
    "modules/axiom-planetgen",
    "modules/axiom-worldsave",
    "modules/axiom-physics",
    "modules/axiom-animation",
    "modules/axiom-animation-authoring",
    "modules/axiom-physical-animation",
    "modules/axiom-figure",
    "modules/axiom-audio",
    "modules/axiom-draw2d",
    "modules/axiom-agent",
    "modules/axiom-agent-harness",
    "modules/axiom-perception",
    "modules/axiom-grid",
    "modules/axiom-streaming",
    "modules/axiom-visibility",
    "modules/axiom-scatter",
    "modules/axiom-world",
    "modules/axiom-forest",
    "modules/axiom-tween",
    "modules/axiom-tick",
    "modules/axiom-animation",
    "modules/axiom",
    "apps/axiom-animation-lab",
    "apps/axiom-demo-rotating-cube",
    # The demo gallery: every browser/WASM demo (rotating-cube, netplay, retro_fps,
    # stress-cubes, growth, zanzoban, quintet, physics-crucible, debug-overlay
    # harness) merged into ONE composition-leaf app crate (apps/axiom-gallery).
    "apps/axiom-gallery",
    "apps/axiom-netcode-demo",
    "apps/axiom-netcode-sim",
    "apps/axiom-netplay-ffi",
    "apps/axiom-sim-crucible",
    "apps/axiom-proc-playground",
    "apps/axiom-proc-player",
    "apps/axiom-asset-stream-demo",
    "apps/axiom-worldgen-demo",
    "apps/axiom-animation-lab",
    "apps/axiom-game-runtime",
    # The developer-facing workspace app: opens a project, builds a canonical
    # launch spec, and records/replays real runtime sessions (composition leaf).
    "apps/axiom-workspace",
    "crates/xtask",
    "tools/axiom-asset-pack",
    "tools/axiom-netcode-relay",
    "tools/axiom-netplay-server",
    "tools/axiom-netplay-load",
    "tools/axiom-profile-runner",
    "tools/axiom-dev-reload",
    "tools/axiom-proc-inspect",
    "tools/axiom-proc-fuzz",
    "tools/axiom-render-bench",
    # The capture harness. Its native GPU `offscreen` arm is behind a NON-DEFAULT
    # feature (see tools/axiom-shot/Cargo.toml), so `cargo test --workspace` and
    # the coverage/dylint gates — which build members with default features — never
    # enable `axiom-gpu-backend/offscreen`, keeping that un-coverable native-wgpu
    # arm compiled out. Its parity tests now run in CI; the GPU ones need
    # `--features offscreen`. As a tool it loads the apps it renders (the
    # sanctioned capture-host role — see CAPTURE_HARNESS_TOOLS in xtask).
    "tools/axiom-shot",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.89"

# Custom `dylint` lints (repo tooling — see tools/lints/). These hook into rustc
# to enforce structural rules the text-based xtask checker can't, starting with
# `test_without_assertion`. Run with `cargo dylint --all -- --all-targets`. This
# is metadata only: it adds no dependency edge, so the lint workspace stays out
# of the engine graph and the Module/Coverage laws.
[workspace.metadata.dylint]
libraries = [
    { path = "tools/lints/test_without_assertion" },
    { path = "tools/lints/no_unwrap_in_engine" },
    { path = "tools/lints/engine_no_time_in_sim" },
    { path = "tools/lints/engine_genuine_dependency" },
    # Tier-1 rulebook fan-out (banned-symbol / structural-size lints).
    { path = "tools/lints/engine_no_transmute" },
    { path = "tools/lints/engine_no_uninit_memory" },
    { path = "tools/lints/engine_no_static_mut" },
    { path = "tools/lints/engine_no_thread_spawn" },
    { path = "tools/lints/engine_no_wildcard_imports" },
    { path = "tools/lints/engine_no_runtime_type_branch" },
    { path = "tools/lints/engine_no_recursion" },
    { path = "tools/lints/engine_no_branching" },
    { path = "tools/lints/engine_no_unitless_float_public_api" },
    { path = "tools/lints/engine_no_large_files" },
    { path = "tools/lints/engine_no_large_functions" },
    { path = "tools/lints/engine_no_large_structs" },
    { path = "tools/lints/engine_no_large_enums" },
    { path = "tools/lints/engine_no_large_impl_blocks" },
    { path = "tools/lints/engine_require_module_docs" },
]

# Deterministic, size-conscious release profile suitable for a future wasm build.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

# Optimize the cryptography dependencies even in debug/test builds. ed25519/
# curve25519 field arithmetic is ~100x slower unoptimized, which would make the
# signed-lockstep tests (and the coverage gate) crawl. These are third-party
# dependencies, not engine spine, so optimizing them does not affect coverage
# instrumentation of our own crates — it only makes signing/verification fast.
[profile.dev.package.curve25519-dalek]
opt-level = 3
[profile.dev.package.ed25519-dalek]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
