[package]
name = "axiom-animation-lab"
description = "The Axiom Animation Lab: a tiny deterministic, headless proof app that scrubs, plays, and inspects a low-poly humanoid rig performing a right-foot soccer kick. It composes the math layer and the axiom-animation module into a frame-by-frame debug view — ground plane, ball, skeleton bone lines, joint markers, right-foot and plant-foot markers, and the KickContact frame marker — rendered as deterministic SVG plus a terminal inspection table. Apps are composition leaves, exempt from the branchless and 100%-coverage spine gates. No skinning, IK, physics, or blending — just a scrubbable kick."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[[bin]]
name = "axiom-animation-lab"
path = "src/main.rs"

[dependencies]
axiom-animation = { path = "../../modules/axiom-animation" }
axiom-math = { path = "../../crates/axiom-math" }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
