[package]
name = "axiom-animation-lab"
description = "Axiom app: authors a humanoid rig and a right-foot soccer kick entirely through the axiom-animation module facade, then samples, joint-limit-clamps, and forward-kinematics-solves the kick per frame and renders it as SVG stick figures. All the *meaning* (the humanoid, the named kick phases, the KickContact event) lives here in the app; the engine module owns only the mechanism."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[[bin]]
name = "axiom-animation-lab"
path = "src/main.rs"

[dependencies]
axiom-kernel = { path = "../../crates/axiom-kernel" }
axiom-math = { path = "../../crates/axiom-math" }
axiom-animation = { path = "../../modules/axiom-animation" }
axiom-figure = { path = "../../modules/axiom-figure" }

[lints.rust]
unsafe_code = "forbid"
