[package]
name = "axiom-browser-dev-harness"
description = "Axiom browser/WASM developer harness: a debug overlay + tiny command console, toggled by the physical Backquote key, mounted over a bare canvas. App-side developer tooling only — the deterministic engine spine never learns about the DOM, keyboard, CSS, or command text. The overlay logic (density, command registry, keyboard mapping, diagnostics snapshot) is pure and native-tested; the DOM controller is the thin wasm32 edge."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# This app has NO engine dependencies: the overlay reports diagnostics through a
# replaceable stub provider, so nothing engine-shaped is needed to drive the
# overlay machinery. All non-DOM logic compiles + tests on native; the DOM glue
# is confined to wasm32 below.

# Browser entry only: the wasm-bindgen glue, a panic hook, and the DOM surface
# the overlay is drawn into. Confined to wasm32, so native `cargo test
# --workspace` never compiles them — and never needs a browser to test the
# overlay's logic.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Event",
    "EventTarget",
    "Performance",
    "console",
] }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
