[package]
name = "axiom-browser-dev-harness"
description = "Axiom browser/WASM developer harness for the debug overlay. A thin app: it mounts the axiom-debug-overlay module's overlay over a bare canvas and feeds it real browser-side diagnostics (RAF-measured fps/frame-time, a frame counter, document visibility, and a navigator.gpu capability probe with the engine's webgpu→webgl2 fallback semantics). All overlay logic now lives in the module; this app is just the host that wires it up."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# Browser entry only: the overlay module (composed via its DebugOverlayApi
# facade — Module Law: apps compose modules), the wasm-bindgen glue, a panic
# hook, and the bits of web-sys the harness needs to MEASURE real diagnostics
# (RAF, the performance clock, document visibility, the navigator.gpu probe). The
# overlay is used only from the wasm entry, so — like doom's windowing dep — it
# lives here, confined to wasm32, and native `cargo test --workspace` compiles
# nothing of this app.
[target.'cfg(target_arch = "wasm32")'.dependencies]
axiom-debug-overlay = { path = "../../modules/axiom-debug-overlay" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Document",
    "Performance",
] }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
