[package]
name = "axiom-demo-rotating-cube-browser"
description = "Axiom browser/WASM app: the visible rotating-cube slice. The only crate allowed to use browser/WASM platform APIs and a live wgpu binding; it reuses the engine modules and feeds the same GpuSubmission shape into axiom-webgpu live mode."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Layers (allowed by app.toml).
axiom-kernel = { path = "../../crates/axiom-kernel" }
axiom-runtime = { path = "../../crates/axiom-runtime" }
axiom-math = { path = "../../crates/axiom-math" }
axiom-host = { path = "../../crates/axiom-host" }
axiom-frame = { path = "../../crates/axiom-frame" }

# Modules (allowed by app.toml). This app composes the same modules the
# headless app does; it does NOT depend on the headless app (apps are leaves).
axiom-scene = { path = "../../modules/axiom-scene" }
axiom-resources = { path = "../../modules/axiom-resources" }
axiom-render = { path = "../../modules/axiom-render" }
axiom-webgpu = { path = "../../modules/axiom-webgpu" }

# Browser / WASM platform dependencies. Confined to this app and pulled in
# ONLY for the wasm32 target, so native `cargo test --workspace` never
# compiles them and the deterministic core stays browser-free.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
] }
console_error_panic_hook = "0.1"
wgpu = "25"
raw-window-handle = "0.6"
bytemuck = "1"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
