[package]
name = "axiom-demo-rotating-cube-browser"
description = "Axiom browser/WASM app: the visible rotating-cube slice, as pure scene description on the engine's App API. Depends only on the `axiom` umbrella; the wasm entry calls App::run, which drives the live wgpu presentation through axiom-windowing."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The one engine crate an app imports. Everything else (scene, render, the live
# windowing/wgpu backend) comes through the umbrella + its wasm32 windowing dep.
axiom = { path = "../../modules/axiom" }

# Browser entry only: the wasm-bindgen export macro + a panic hook. Confined to
# wasm32, so native `cargo test --workspace` never compiles them.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Test-only: parse the app's data package (axiom.app.toml + package/scenes/*.toml)
# to assert it mirrors the runtime scene (the first app-datafication step — see
# docs/app-datafication/FIRST_DATA_ONLY_APP_MIGRATION.md). `toml`/`serde` are the
# repo's sanctioned app-tier authoring stack (already used by axiom-roomed-puzzle
# and the tools); as dev-dependencies they never enter the wasm bundle.
[dev-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
