[package]
name = "axiom-doom-browser"
description = "Axiom browser/WASM app: a DOOM-style first-person shooter built entirely on the engine — a cube-walled level, a first-person camera driven by the engine's controller input, chasing enemy cubes, hitscan shooting, and a health/score HUD. Depends only on the `axiom` umbrella; the wasm entry drives the live wgpu loop through axiom-windowing."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
# Only the explicitly-declared `agent` bin exists; this keeps cargo from
# auto-discovering `src/bin/render.rs` (the agent bin's wgpu submodule) as a
# separate, ungated binary that the wasm build would then try to compile.
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

# The native agent-bridge server: drives the real DOOM game headlessly and
# answers JSON over HTTP so an external agent can send inputs and read back state
# (and, with `agent-render`, images). Gated behind `required-features` so the
# default workspace gates and the wasm build never compile it or its deps.
[[bin]]
name = "agent"
path = "src/bin/agent.rs"
required-features = ["agent"]

[features]
# Headless agent server (structured state). Native-only deps, pulled in only when
# building the agent bin — off by default, so coverage/test/clippy/wasm are
# untouched.
agent = ["dep:tiny_http", "dep:serde", "dep:serde_json", "dep:tungstenite"]
# Adds the native offscreen wgpu renderer so the agent can read back images.
agent-render = ["agent", "dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:png"]

# The deterministic frame recorder, available to native integration tests (the
# replay-determinism proof). The lib's wasm arm depends on it for the scrubber
# under the wasm32 target table below; this makes it available to native tests.
[dev-dependencies]
axiom-recording = { path = "../../modules/axiom-recording" }

[dependencies]
# The one engine crate an app imports. The first-person camera (Controller +
# FirstPersonInput), the scene authoring vocabulary, and the live windowing/wgpu
# backend (wasm32) all arrive through the umbrella.
axiom = { path = "../../modules/axiom" }

# Native agent-bridge deps (optional; enabled by the `agent` feature). Confined to
# non-wasm so the browser build never sees them.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tiny_http = { version = "0.12", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
# The browser bridge mode hosts a WebSocket the live browser connects to.
tungstenite = { version = "0.24", optional = true }
# Offscreen renderer (agent-render): a native wgpu render-to-texture mirroring
# the live wasm binding, plus PNG encoding. Optional — only the image-capable
# agent build compiles wgpu.
wgpu = { version = "25", optional = true }
bytemuck = { version = "1", optional = true }
pollster = { version = "0.4", optional = true }
png = { version = "0.17", optional = true }

# Browser entry only: the wasm-bindgen glue, a panic hook, and the DOM surface
# the HUD (health/score/ammo) is drawn into. Confined to wasm32, so native
# `cargo test --workspace` never compiles them.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# The live presentation loop (drives our own per-tick first-person input each
# frame, which App::run does not), plus the wasm glue and the DOM the HUD draws
# into. Confined to wasm32, so native `cargo test --workspace` never compiles them.
axiom-windowing = { path = "../../modules/axiom-windowing" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Location",
    "Element",
    "Node",
    "HtmlElement",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "MouseEvent",
    "WebSocket",
    "EventSource",
    "MessageEvent",
    "console",
] }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
